--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,8 @@
 Source: mp3gain
 Section: sound
 Priority: optional
-Maintainer: Stefan Fritsch <sf@debian.org>
+Maintainer: dodamn <dodamn@gmail.com>
+XSBC-Original-Maintainer: Stefan Fritsch <sf@debian.org>
 Build-Depends: debhelper (>= 7.0.0), docbook-to-man, dpatch
 Homepage: http://mp3gain.sourceforge.net/
 Standards-Version: 3.8.2
